# systematic-investing-engine

./: .env.example  .gitignore  README.md  inspect_notion.py  inspect_notion_query.py  package-lock.json  pyproject.toml
configs/: notion.yml  overrides_applied.yml  providers.yml
configs/strategy/: default.yml
configs/universe/: ipsa.yml
data/: universe_membership.csv
src/factor_engine/: __init__.py  cli.py
src/factor_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/factor_engine/backtest/: __init__.py  execution.py  performance.py  runner.py  schedule.py
src/factor_engine/config/: __init__.py  loader.py
src/factor_engine/db/: __init__.py  models.py  session.py
src/factor_engine/factors/: __init__.py  engine.py
src/factor_engine/ingest/: service.py
src/factor_engine/notion/: __init__.py  client.py
src/factor_engine/overrides/: __init__.py  service.py  store.py
src/factor_engine/portfolio/: __init__.py  builder.py
src/factor_engine/providers/: base.py  yahoo.py
src/factor_engine/reports/: __init__.py  run_summary.py
src/factor_engine/runs/: __init__.py  context.py
src/factor_engine/signals/: __init__.py  generator.py
src/factor_engine/ui/: app.py
src/factor_engine/universe/: __init__.py  membership.py  query.py
tests/: conftest.py  test_overrides.py  test_pipeline.py  test_run_summary.py  test_scaffold.py
